[package]
name = "pcap-file"
edition = "2021"
version = "2.0.0-rc1"
authors = ["Courvoif <courvoif@pm.me>"]
description = "A crate to read and write Pcap and PcapNg"

license = "MIT"
documentation = "https://docs.rs/pcap-file/"
repository = "https://github.com/courvoif/pcap-file"
readme = "README.md"
keywords = ["pcap", "pcapng", "parse", "read", "write"]
categories = ["encoding", "parsing"]

[dependencies]
byteorder_slice = "3.0.0"
derive-into-owned = "0.2.0"
thiserror = "1.0.35"
castaway = "0.2.2"

[dev-dependencies]
glob = "0.3.0"
hex = "0.4.3"


[profile.bench]
lto = "fat"
