[package]
name = "pcap-file"
edition = "2021"
version = "3.0.0-rc1"
authors = ["Courvoif <courvoif@pm.me>"]
description = "A crate to parse, read and write Pcap and PcapNg"

license = "MIT"
documentation = "https://docs.rs/pcap-file/"
repository = "https://github.com/courvoif/pcap-file"
readme = "README.md"
keywords = ["pcap", "pcapng", "parse", "read", "write"]
categories = ["encoding", "parsing"]

exclude = ["benches/bench.pcap", "benches/bench.pcapng", "fuzz", "tests"]


[dependencies]
byteorder_slice = "3.0.0"
derive-into-owned = "0.2.0"
once_cell = "1.21.3"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.8.1"
glob = "0.3.3"
hex = "0.4.3"

[[bench]]
name = "benches"
harness = false

[profile.bench]
lto = "fat"
